[gd_scene load_steps=17 format=2]

[ext_resource path="res://background_blue.png" type="Texture" id=1]
[ext_resource path="res://block_small.png" type="Texture" id=2]
[ext_resource path="res://ball_red_small.png" type="Texture" id=3]
[ext_resource path="res://hole_small_end_alt.png" type="Texture" id=4]
[ext_resource path="res://LabelFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Logic.gd" type="Script" id=6]
[ext_resource path="res://Ball.gd" type="Script" id=7]
[ext_resource path="res://Hack-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Challenge4.gd" type="Script" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "block_small.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=4]
radius = 21.0238

[sub_resource type="CircleShape2D" id=8]
radius = 25.318

[sub_resource type="DynamicFont" id=6]
size = 256
outline_size = 2
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 0.423529 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 64.0
content_margin_right = 64.0
content_margin_top = 128.0
content_margin_bottom = 128.0
bg_color = Color( 0.521569, 0, 1, 0.52549 )

[node name="Challenge4" type="Node2D"]
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Stage" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Floor" type="Sprite" parent="Stage"]
position = Vector2( 512, 320 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 640 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="Stage"]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65542, 0, 0, 65551, 0, 0, 131072, 0, 0, 131078, 0, 0, 131087, 0, 0, 196608, 0, 0, 196611, 0, 0, 196614, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262147, 0, 0, 262150, 0, 0, 262159, 0, 0, 327680, 0, 0, 327683, 0, 0, 327686, 0, 0, 327695, 0, 0, 393216, 0, 0, 393219, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393231, 0, 0, 458752, 0, 0, 458755, 0, 0, 458767, 0, 0, 524288, 0, 0, 524291, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Hole" type="Area2D" parent="."]
position = Vector2( 896, 128 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Hole"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hole"]
shape = SubResource( 4 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 128, 512 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 8 )

[node name="Logic" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OuchLabel" type="Label" parent="Logic"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "OUCH!"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Logic"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 984.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Good job!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Hole" to="Ball" method="_on_Hole_body_entered"]
[connection signal="wall_hit" from="Ball" to="Logic" method="_on_Ball_wall_hit"]
[connection signal="win" from="Ball" to="Logic" method="_on_Ball_win"]
